Add local_storage to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,10 @@ tmp/
 temp/
 *.tmp
 
+# Local storage (user uploads)
+backend/local_storage/uploads/
+frontend/.next/
+
 # Secrets
 secrets/
 *.pem
