--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,17 @@
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+pydantic==2.5.0
+pydantic-settings==2.1.0
 slowapi==0.1.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+httpx==0.25.2
+celery==5.3.4
+redis==5.0.1
+pillow==10.1.0
+boto3==1.29.7
+openai==1.3.7
+alembic==1.12.1
