--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -2,8 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies (including ffmpeg for video processing)
 RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    libpq-dev \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
